--- a/PSO_levy-simpy.ipynb
+++ b/PSO_levy-simpy.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Currently not used\n",
     "def levy_step(mu=1.5):\n",
     "    \"\"\"Generate a step length from a Levy distribution.\"\"\"\n",
     "    return np.random.pareto(mu)  # Using Pareto distribution for Levy flight"
