glowwarm add new contents

--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -66,12 +66,12 @@
     "# GSO Parameters\n",
     "num_glowworms = 50       # Number of glowworms\n",
     "dimension = 2            # Problem dimensionality\n",
-    "lower_bound = -5      # Lower bound of the search space\n",
-    "upper_bound = 5     # Upper bound of the search space\n",
+    "lower_bound = -500         # Lower bound of the search space\n",
+    "upper_bound = 500          # Upper bound of the search space\n",
     "iterations = 500         # Number of iterations\n",
     "luciferin_decay = 0.2    # Decay rate of luciferin\n",
     "luciferin_enhancement = 0.8 # Enhancement of luciferin after each iteration\n",
-    "neighborhood_radius = 2 # Initial neighborhood radius\n",
+    "neighborhood_radius = 2  # Initial neighborhood radius\n",
     "step_size = 0.03         # Movement step size\n",
     "\n",
     "# Initialize glowworm positions and luciferin levels\n",
@@ -82,33 +82,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "92b89b5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sin(3*np.pi/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "4de59953",
    "metadata": {},
    "outputs": [],
    "source": [
     "class glowworm:\n",
-    "    def __init__(self, env, name, glowworms, X=np.array([1, 1]), target = [np.array([250,250]),999], waypoint = np.array([250,250]), c1=0.1, c2=0.1, w=0.8, speed=1.5433, transRange=100.0):\n",
+    "    def __init__(self, env, name, glowworms, X=np.array([1, 1]), target = [np.array([10,np.pi/2]),999], waypoint = np.array([250,250]), luciferin_decay=0.2, \n",
+    "                 c2=0.1, luciferin_enhancement=0.8, speed=1.5433, transRange=100.0, max_hop=5):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        self.glowworms = glowworms  # List of all glowworms\n",
-    "        self.c1 = c1\n",
-    "        self.c2 = c2\n",
-    "        self.w = w\n",
+    "        self.luciferin_decay = luciferin_decay    # Decay rate of luciferin\n",
+    "        self.luciferin_enhancement = luciferin_enhancement # Enhancement of luciferin after each iteration\n",
     "        self.transmission_range = transRange\n",
-    "        self.speed = speed # 0.015433 -> 3 knots\n",
-    "        self.stop_flag = False # when find the target stop\n",
-    "        self.targetFounded = False\n",
+    "        self.speed = speed\n",
+    "        self.max_hop = max_hop\n",
+    "        # self.stop_flag = False # when find the target stop\n",
+    "        # self.targetFounded = False\n",
     "        self.waypoint = waypoint\n",
+    "        self.nMsg = []\n",
     "\n",
     "        self.X = X\n",
     "        self.target = target\n",
     "        self.V = np.random.randn(2) * 0.1\n",
-    "        self.pbest_position = self.X.copy()\n",
-    "        self.pbest_fitness = f(self.X[0], self.X[1])\n",
-    "\n",
-    "        self.nbest_position = self.X.copy()\n",
-    "        self.nbest_fitness = self.pbest_fitness\n",
     "\n",
     "        self.positions = [self.X.copy()]\n",
     "\n",
@@ -159,17 +177,17 @@
     "                self.update()\n",
     "                #print(self.name,\" Updated! \", self.V, \" nbest_loc \", self.nbest_position, \" nbest_fit \", self.nbest_fitness)\n",
     "\n",
-    "    def targetFound(self):\n",
-    "        if np.linalg.norm(self.X - self.target[0]) <= 1:\n",
-    "            self.stop_flag = True\n",
-    "            self.targetFounded = True\n",
-    "            self.nbest_position = self.target[0].copy()\n",
-    "            self.nbest_fitness = self.target[1]\n",
+    "    # def targetFound(self):\n",
+    "    #     if np.linalg.norm(self.X - self.target[0]) <= 1:\n",
+    "    #         self.stop_flag = True\n",
+    "    #         self.targetFounded = True\n",
+    "    #         self.nbest_position = self.target[0].copy()\n",
+    "    #         self.nbest_fitness = self.target[1]\n",
     "\n",
     "    def run(self):\n",
     "        i = 0\n",
     "        while True:\n",
-    "            self.targetFound()\n",
+    "            # self.targetFound()\n",
     "            self.sensing()\n",
     "            self.move()\n",
     "            if i%5 ==0:\n",
@@ -178,6 +196,33 @@
     "                self.positions.append(self.X.copy()) # take the records of position\n",
     "            i = i + 1\n",
     "            yield self.env.timeout(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0077f3ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def initialize_grid_glowworms(n_glowworms, start, end):\n",
+    "    \"\"\"Evenly distribute glowworms on a grid within the search space.\"\"\"\n",
+    "    list_glowworms = []\n",
+    "    \n",
+    "    # Determine the number of rows and columns based on the number of glowworms\n",
+    "    n_side = int(np.ceil(np.sqrt(n_glowworms)))  # Number of rows and columns in the grid\n",
+    "    x_coords = np.linspace(start, end, n_side)\n",
+    "    y_coords = np.linspace(start, end, n_side)\n",
+    "\n",
+    "    # Create glowworms and assign grid positions\n",
+    "    for i in range(n_glowworms):\n",
+    "        # Calculate grid coordinates (i.e., row and column)\n",
+    "        row = i // n_side\n",
+    "        col = i % n_side\n",
+    "        grid_position = np.array([x_coords[col], y_coords[row]])  # Assign grid position\n",
+    "        list_glowworms.append(grid_position)\n",
+    "    \n",
+    "    return list_glowworms"
    ]
   },
   {
