--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "class glowworm:\n",
     "    def __init__(self, env, name, glowworms, X=np.array([1, 1]), target = [np.array([10,np.pi/2]),999], waypoint = np.array([250,250]), luciferin_decay=0.2, \n",
-    "                 c2=0.1, luciferin_enhancement=0.8, speed=1.5433, transRange=100.0, max_hop=5):\n",
+    "                 luciferin_enhancement=0.8, speed=1.5433, transRange=100.0, max_hop=5):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        self.glowworms = glowworms  # List of all glowworms\n",
@@ -123,6 +123,7 @@
     "        # self.targetFounded = False\n",
     "        self.waypoint = waypoint\n",
     "        self.nMsg = []\n",
+    "        self.luciferin = 0.0\n",
     "\n",
     "        self.X = X\n",
     "        self.target = target\n",
@@ -148,14 +149,12 @@
     "            self.nbest_fitness = nbest_fitness\n",
     "            self.targetFounded = isTarget\n",
     "    \n",
-    "    def update(self):\n",
-    "        r1, r2 = np.random.rand(2)\n",
-    "        self.V = self.w * self.V + self.c1 * r1 * (self.pbest_position - self.X) + self.c2 * r2 * (self.nbest_position - self.X)\n",
-    "        self.waypoint = self.X + self.V\n",
+    "    def update_luciferin(self):\n",
+    "        luciferin = (1 - luciferin_decay) * luciferin + luciferin_enhancement * (1 / (1 + objective_function(self.X)))\n",
     "\n",
     "    def sensing(self):\n",
     "        if not self.targetFounded:\n",
-    "            fitness = f(self.X[0], self.X[1])\n",
+    "            fitness = objective_function([self.X[0], self.X[1]])\n",
     "\n",
     "            if fitness < self.pbest_fitness:\n",
     "                self.pbest_position = self.X.copy()\n",
