--- a/PSO_levy-simpy.ipynb
+++ b/PSO_levy-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "id": "7cbb19a8-6b46-498e-a132-71ecfd7f8c75",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "id": "cfada43c-fcd3-48b2-acd0-4ad4f5766685",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 4,
    "id": "b569d671-47be-4abd-862a-f9e9f6b1dd1a",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "9eb3c9ae",
    "metadata": {},
    "outputs": [],
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 6,
    "id": "c741a3a4",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 7,
    "id": "64befeb3",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 8,
    "id": "ca6755f2-2172-4fd8-9df5-ce4d419600f0",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "id": "e22fea4b-e7b0-470b-a76d-262646e94d80",
    "metadata": {},
    "outputs": [
@@ -255,12 +255,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Condition met at time 553: 20/20 particles near target.\n"
+      "Condition met at time 555: 20/20 particles near target.\n"
      ]
     }
    ],
    "source": [
     "positions, nbest, nbest_obj = simulate_pso()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "97372d61",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([320.21291508, 312.07561271]), -1.8060466379013063)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nbest, nbest_obj"
    ]
   },
   {
