--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -109,25 +109,26 @@
    "outputs": [],
    "source": [
     "class glowworm:\n",
-    "    def __init__(self, env, name, glowworms, X=np.array([1, 1]), target = [np.array([10,np.pi/2]),999], waypoint = np.array([250,250]), luciferin_decay=0.2, \n",
-    "                 luciferin_enhancement=0.8, speed=1.5433, transRange=100.0, max_hop=5):\n",
+    "    def __init__(self, env, ID, glowworms, X=np.array([1, 1]), waypoint = np.array([250,250]), luciferin_decay=0.2, luciferin_enhancement=0.8, \n",
+    "                 speed=1.5433, transRange=100.0, max_hop=5):\n",
     "        self.env = env\n",
-    "        self.name = name\n",
+    "        self.ID = ID\n",
     "        self.glowworms = glowworms  # List of all glowworms\n",
+    "        ### luciferin Parameters\n",
     "        self.luciferin_decay = luciferin_decay    # Decay rate of luciferin\n",
     "        self.luciferin_enhancement = luciferin_enhancement # Enhancement of luciferin after each iteration\n",
-    "        self.transmission_range = transRange\n",
-    "        self.speed = speed\n",
-    "        self.max_hop = max_hop\n",
-    "        # self.stop_flag = False # when find the target stop\n",
-    "        # self.targetFounded = False\n",
-    "        self.waypoint = waypoint\n",
-    "        self.nMsg = []\n",
     "        self.luciferin = 0.0\n",
-    "\n",
+    " \n",
+    "        ### Communicaton Parameters\n",
+    "        self.transmission_range = transRange\n",
+    "        self.nMsg = [[self.ID,self.luciferin]] ###[[ID_A,L],[ID_B,,],[ID_C,,],...[ID_E,,]]\n",
+    "        self.max_hop = max_hop\n",
+    "        \n",
+    "        ### Mobility Parameters\n",
     "        self.X = X\n",
-    "        self.target = target\n",
     "        self.V = np.random.randn(2) * 0.1\n",
+    "        self.speed = speed        \n",
+    "        self.waypoint = waypoint\n",
     "\n",
     "        self.positions = [self.X.copy()]\n",
     "\n",
@@ -139,30 +140,30 @@
     "            if glowworm != self:\n",
     "                distance = np.linalg.norm(self.X - glowworm.X) # Euclidean distance\n",
     "                if distance < self.transmission_range:  # Accoustic module Transmission range\n",
-    "                    glowworm.receive(self.nbest_position, self.nbest_fitness, self.targetFounded)\n",
+    "                    glowworm.receive(self.nMsg)\n",
     "\n",
-    "\n",
-    "    def receive(self, nbest_position, nbest_fitness, isTarget):\n",
+    "    def receive(self, nMsg):\n",
     "        \"\"\"update the personal nbest\"\"\"\n",
-    "        if nbest_fitness < self.nbest_fitness:\n",
+    "        received_luciferin = nMsg[0][1]\n",
+    "        if self.luciferin < received_luciferin:\n",
     "            self.nbest_position = nbest_position.copy()\n",
     "            self.nbest_fitness = nbest_fitness\n",
-    "            self.targetFounded = isTarget\n",
+    "        else:\n",
+    "\n",
     "    \n",
     "    def update_luciferin(self):\n",
-    "        luciferin = (1 - luciferin_decay) * luciferin + luciferin_enhancement * (1 / (1 + objective_function(self.X)))\n",
+    "        self.luciferin = (1 - self.luciferin_decay) * self.luciferin + self.luciferin_enhancement * (1 / (1 + objective_function(self.X)))\n",
     "\n",
     "    def sensing(self):\n",
-    "        if not self.targetFounded:\n",
-    "            fitness = objective_function([self.X[0], self.X[1]])\n",
+    "        self.update_luciferin()\n",
     "\n",
-    "            if fitness < self.pbest_fitness:\n",
-    "                self.pbest_position = self.X.copy()\n",
-    "                self.pbest_fitness = fitness\n",
+    "        if fitness < self.pbest_fitness:\n",
+    "            self.pbest_position = self.X.copy()\n",
+    "            self.pbest_fitness = fitness\n",
     "\n",
-    "            if fitness < self.nbest_fitness:\n",
-    "                self.nbest_position = self.X.copy()\n",
-    "                self.nbest_fitness = fitness\n",
+    "        if fitness < self.nbest_fitness:\n",
+    "            self.nbest_position = self.X.copy()\n",
+    "            self.nbest_fitness = fitness\n",
     "\n",
     "    def move(self):\n",
     "        if not self.stop_flag:\n",
