--- a/PSO_levy-simpy.ipynb
+++ b/PSO_levy-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "7cbb19a8-6b46-498e-a132-71ecfd7f8c75",
    "metadata": {},
    "outputs": [],
@@ -23,6 +23,17 @@
     "def f(x, y):\n",
     "    \"Objective function\"\n",
     "    return ((x/100)-3.14)**2 + ((y/100)-2.72)**2 + np.sin(3*(x/100)+1.41) + np.sin(4*(y/100)-1.73)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3fb9b893",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x, y):\n",
+    "    return np.cos(x) * np.cos(y) * np.exp(-((x - np.pi)**2 + (y - np.pi)**2))"
    ]
   },
   {
