--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -67,83 +67,85 @@
     "# GSO FUNCTIONS\n",
     "##############################################################################\n",
     "\n",
-    "def keep_in_bounds(x, dims):\n",
-    "    if x < 0:\n",
-    "        return 0\n",
-    "    elif x > dims:\n",
-    "        return dims\n",
-    "    else:\n",
-    "        return x\n",
+    "class Particle:\n",
     "\n",
-    "def starting_points():\n",
-    "    \"\"\"Initialize the worm positions randomly.\"\"\"\n",
-    "    return np.random.rand(num_worms, 2) * dims\n",
+    "    def keep_in_bounds(x, dims):\n",
+    "        if x < 0:\n",
+    "            return 0\n",
+    "        elif x > dims:\n",
+    "            return dims\n",
+    "        else:\n",
+    "            return x\n",
     "\n",
-    "def get_score(pop):\n",
-    "    \"\"\"Compute each worm's 'influence radius' based on its fitness.\"\"\"\n",
-    "    temp = [fitness_function(tup) for tup in pop]\n",
-    "    shifted = [t + lower_bound for t in temp]\n",
-    "    return [val / influence_factor for val in shifted]\n",
+    "    def starting_points():\n",
+    "        \"\"\"Initialize the worm positions randomly.\"\"\"\n",
+    "        return np.random.rand(num_worms, 2) * dims\n",
     "\n",
-    "def influence_matrix(pop, score):\n",
-    "    \"\"\"If worm j is within worm j's radius, record distance; else 0.\"\"\"\n",
-    "    graph = np.zeros((num_worms, num_worms))\n",
-    "    for i in range(num_worms):\n",
-    "        for j in range(num_worms):\n",
-    "            if i == j:\n",
-    "                graph[i][j] = 0\n",
-    "            else:\n",
-    "                distance_ij = dist.euclidean(pop[i], pop[j])\n",
-    "                if distance_ij <= score[j]:\n",
-    "                    graph[i][j] = distance_ij\n",
-    "    return graph\n",
+    "    def get_score(pop):\n",
+    "        \"\"\"Compute each worm's 'influence radius' based on its fitness.\"\"\"\n",
+    "        temp = [fitness_function(tup) for tup in pop]\n",
+    "        shifted = [t + lower_bound for t in temp]\n",
+    "        return [val / influence_factor for val in shifted]\n",
     "\n",
-    "def next_turn(pop, score, inf_mat):\n",
-    "    \"\"\"Update each worm's position based on the matrix of influences.\"\"\"\n",
-    "    new_pop = copy.deepcopy(pop)\n",
-    "    for i in range(num_worms):\n",
-    "        x_move = 0.0\n",
-    "        y_move = 0.0\n",
-    "        for j in range(num_worms):\n",
-    "            if inf_mat[i][j] != 0 and score[i] < score[j]:\n",
-    "                percent_move = 1 - (inf_mat[i][j] / score[j])\n",
-    "                x_move += (pop[j][0] - pop[i][0]) * percent_move / 10\n",
-    "                y_move += (pop[j][1] - pop[i][1]) * percent_move / 10\n",
-    "        \n",
-    "        # Add random jitter\n",
-    "        jitter_x = max_jitter * np.random.rand() * np.random.randint(-1,2)\n",
-    "        jitter_y = max_jitter * np.random.rand() * np.random.randint(-1,2)\n",
-    "        \n",
-    "        new_pop[i][0] += x_move + jitter_x\n",
-    "        new_pop[i][1] += y_move + jitter_y\n",
-    "        \n",
-    "        # Bound checking\n",
-    "        new_pop[i][0] = keep_in_bounds(new_pop[i][0], dims)\n",
-    "        new_pop[i][1] = keep_in_bounds(new_pop[i][1], dims)\n",
+    "    def influence_matrix(pop, score):\n",
+    "        \"\"\"If worm j is within worm j's radius, record distance; else 0.\"\"\"\n",
+    "        graph = np.zeros((num_worms, num_worms))\n",
+    "        for i in range(num_worms):\n",
+    "            for j in range(num_worms):\n",
+    "                if i == j:\n",
+    "                    graph[i][j] = 0\n",
+    "                else:\n",
+    "                    distance_ij = dist.euclidean(pop[i], pop[j])\n",
+    "                    if distance_ij <= score[j]:\n",
+    "                        graph[i][j] = distance_ij\n",
+    "        return graph\n",
     "\n",
-    "    return new_pop\n",
+    "    def next_turn(pop, score, inf_mat):\n",
+    "        \"\"\"Update each worm's position based on the matrix of influences.\"\"\"\n",
+    "        new_pop = copy.deepcopy(pop)\n",
+    "        for i in range(num_worms):\n",
+    "            x_move = 0.0\n",
+    "            y_move = 0.0\n",
+    "            for j in range(num_worms):\n",
+    "                if inf_mat[i][j] != 0 and score[i] < score[j]:\n",
+    "                    percent_move = 1 - (inf_mat[i][j] / score[j])\n",
+    "                    x_move += (pop[j][0] - pop[i][0]) * percent_move / 10\n",
+    "                    y_move += (pop[j][1] - pop[i][1]) * percent_move / 10\n",
+    "            \n",
+    "            # Add random jitter\n",
+    "            jitter_x = max_jitter * np.random.rand() * np.random.randint(-1,2)\n",
+    "            jitter_y = max_jitter * np.random.rand() * np.random.randint(-1,2)\n",
+    "            \n",
+    "            new_pop[i][0] += x_move + jitter_x\n",
+    "            new_pop[i][1] += y_move + jitter_y\n",
+    "            \n",
+    "            # Bound checking\n",
+    "            new_pop[i][0] = keep_in_bounds(new_pop[i][0], dims)\n",
+    "            new_pop[i][1] = keep_in_bounds(new_pop[i][1], dims)\n",
     "\n",
-    "##############################################################################\n",
-    "# SIMPY INTEGRATION\n",
-    "##############################################################################\n",
-    "def glowworm_optimization(env, pop, positions, nturns):\n",
-    "    \"\"\"\n",
-    "    A generator (process) that runs GSO for 'nturns' iterations in a SimPy environment.\n",
-    "    Each iteration is considered one time-step in the simulation.\n",
-    "    \"\"\"\n",
-    "    for step in range(nturns):\n",
-    "        # Compute glowworm logic\n",
-    "        score = get_score(pop)\n",
-    "        inf_mat = influence_matrix(pop, score)\n",
-    "        pop = next_turn(pop, score, inf_mat)\n",
+    "        return new_pop\n",
     "\n",
-    "        # Store positions for later analysis or plotting\n",
-    "        positions.append(copy.deepcopy(pop))\n",
+    "    ##############################################################################\n",
+    "    # SIMPY INTEGRATION\n",
+    "    ##############################################################################\n",
+    "    def glowworm_optimization(env, pop, positions, nturns):\n",
+    "        \"\"\"\n",
+    "        A generator (process) that runs GSO for 'nturns' iterations in a SimPy environment.\n",
+    "        Each iteration is considered one time-step in the simulation.\n",
+    "        \"\"\"\n",
+    "        for step in range(nturns):\n",
+    "            # Compute glowworm logic\n",
+    "            score = get_score(pop)\n",
+    "            inf_mat = influence_matrix(pop, score)\n",
+    "            pop = next_turn(pop, score, inf_mat)\n",
     "\n",
-    "        # You could place logging, resource usage, or other simulation interactions here\n",
-    "        \n",
-    "        # Advance simulated time by 1 time unit\n",
-    "        yield env.timeout(1)\n"
+    "            # Store positions for later analysis or plotting\n",
+    "            positions.append(copy.deepcopy(pop))\n",
+    "\n",
+    "            # You could place logging, resource usage, or other simulation interactions here\n",
+    "            \n",
+    "            # Advance simulated time by 1 time unit\n",
+    "            yield env.timeout(1)\n"
    ]
   },
   {
