--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -22,13 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "d274d306",
    "metadata": {},
    "outputs": [],
    "source": [
     "##############################################################################\n",
-    "# GSO PARAMETERS\n",
+    "# GSO PARAMETERS \n",
     "##############################################################################\n",
     "dims = 10\n",
     "num_worms = 20\n",
@@ -40,13 +40,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ce8d5110",
    "metadata": {},
    "outputs": [],
    "source": [
     "##############################################################################\n",
-    "# Fitness Function\n",
+    "# Fitness Function \n",
     "##############################################################################\n",
     "def fitness_function(xy_tuple):\n",
     "    x = xy_tuple[0] / 2\n",
@@ -64,10 +64,22 @@
    "outputs": [],
    "source": [
     "##############################################################################\n",
-    "# GSO FUNCTIONS\n",
+    "# GSO FUNCTIONS \n",
     "##############################################################################\n",
+    "class Glowworm:\n",
+    "    def __init__(self, env, name, neighbors, X=np.array([1, 1]), waypoint = np.array([250,250]),  speed=1.5433, transRange=100.0):\n",
+    "        self.env = env\n",
+    "        self.name = name\n",
+    "        self.neighbors = neighbors  # List of all particles\n",
+    "        self.transmission_range = transRange\n",
+    "        self.speed = speed # 0.015433 -> 3 knots\n",
+    "        self.waypoint = waypoint\n",
     "\n",
-    "class Particle:\n",
+    "        self.X = X\n",
+    "        self.V = np.random.randn(2) * 0.1\n",
+    "\n",
+    "        self.positions = [self.X.copy()]\n",
+    "        self.process = env.process(self.run())\n",
     "\n",
     "    def keep_in_bounds(x, dims):\n",
     "        if x < 0:\n",
@@ -76,10 +88,6 @@
     "            return dims\n",
     "        else:\n",
     "            return x\n",
-    "\n",
-    "    def starting_points():\n",
-    "        \"\"\"Initialize the worm positions randomly.\"\"\"\n",
-    "        return np.random.rand(num_worms, 2) * dims\n",
     "\n",
     "    def get_score(pop):\n",
     "        \"\"\"Compute each worm's 'influence radius' based on its fitness.\"\"\"\n",
@@ -128,16 +136,16 @@
     "    ##############################################################################\n",
     "    # SIMPY INTEGRATION\n",
     "    ##############################################################################\n",
-    "    def glowworm_optimization(env, pop, positions, nturns):\n",
+    "    def glowworm_optimization(self, env, pop, positions, nturns):\n",
     "        \"\"\"\n",
     "        A generator (process) that runs GSO for 'nturns' iterations in a SimPy environment.\n",
     "        Each iteration is considered one time-step in the simulation.\n",
     "        \"\"\"\n",
     "        for step in range(nturns):\n",
     "            # Compute glowworm logic\n",
-    "            score = get_score(pop)\n",
-    "            inf_mat = influence_matrix(pop, score)\n",
-    "            pop = next_turn(pop, score, inf_mat)\n",
+    "            score = self.get_score(pop)\n",
+    "            inf_mat = self.influence_matrix(pop, score)\n",
+    "            pop = self.next_turn(pop, score, inf_mat)\n",
     "\n",
     "            # Store positions for later analysis or plotting\n",
     "            positions.append(copy.deepcopy(pop))\n",
@@ -146,6 +154,18 @@
     "            \n",
     "            # Advance simulated time by 1 time unit\n",
     "            yield env.timeout(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ddd906e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def starting_points():\n",
+    "    \"\"\"Initialize the worm positions randomly.\"\"\"\n",
+    "    return np.random.rand(num_worms, 2) * dims"
    ]
   },
   {
