--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -67,16 +67,18 @@
     "# GSO FUNCTIONS \n",
     "##############################################################################\n",
     "class Glowworm:\n",
-    "    def __init__(self, env, name, neighbors, X=np.array([1, 1]), waypoint = np.array([250,250]),  speed=1.5433, transRange=100.0):\n",
+    "    def __init__(self, env, name, swarm, X=np.array([1, 1]), waypoint = np.array([250,250]),  speed=1.5433, \n",
+    "                 transRange=100.0, score = 0.0):\n",
     "        self.env = env\n",
     "        self.name = name\n",
-    "        self.neighbors = neighbors  # List of all particles\n",
+    "        self.swarm = swarm  # List of all particles\n",
     "        self.transmission_range = transRange\n",
     "        self.speed = speed # 0.015433 -> 3 knots\n",
     "        self.waypoint = waypoint\n",
     "\n",
     "        self.X = X\n",
     "        self.V = np.random.randn(2) * 0.1\n",
+    "        self.score = score # for \n",
     "\n",
     "        self.positions = [self.X.copy()]\n",
     "        self.process = env.process(self.run())\n",
@@ -89,23 +91,18 @@
     "        else:\n",
     "            return x\n",
     "\n",
-    "    def get_score(pop):\n",
-    "        \"\"\"Compute each worm's 'influence radius' based on its fitness.\"\"\"\n",
-    "        temp = [fitness_function(tup) for tup in pop]\n",
-    "        shifted = [t + lower_bound for t in temp]\n",
-    "        return [val / influence_factor for val in shifted]\n",
+    "    def sensing(self): # \n",
+    "        \"\"\"accquire the fitness of worm's current position to calculate 'influence radius'.\"\"\"\n",
+    "        shifted = fitness_function(self.X) + lower_bound\n",
+    "        self.score = shifted / influence_factor\n",
     "\n",
-    "    def influence_matrix(pop, score):\n",
+    "    def influence_matrix(self):\n",
     "        \"\"\"If worm j is within worm j's radius, record distance; else 0.\"\"\"\n",
     "        graph = np.zeros((num_worms, num_worms))\n",
-    "        for i in range(num_worms):\n",
-    "            for j in range(num_worms):\n",
-    "                if i == j:\n",
-    "                    graph[i][j] = 0\n",
-    "                else:\n",
-    "                    distance_ij = dist.euclidean(pop[i], pop[j])\n",
-    "                    if distance_ij <= score[j]:\n",
-    "                        graph[i][j] = distance_ij\n",
+    "        for worm in self.swarm:\n",
+    "            distance = dist.euclidean(self.X, worm.X)\n",
+    "            if distance <= score[j]:\n",
+    "                graph[i][j] = distance\n",
     "        return graph\n",
     "\n",
     "    def next_turn(pop, score, inf_mat):\n",
@@ -153,7 +150,24 @@
     "            # You could place logging, resource usage, or other simulation interactions here\n",
     "            \n",
     "            # Advance simulated time by 1 time unit\n",
-    "            yield env.timeout(1)\n"
+    "            yield self.env.timeout(1)\n",
+    "\n",
+    "    def run(self):\n",
+    "        i = 0\n",
+    "        while True:\n",
+    "            # Compute glowworm logic\n",
+    "            self.sensing()\n",
+    "            inf_mat = self.influence_matrix(pop, score)\n",
+    "            pop = self.next_turn(pop, score, inf_mat)\n",
+    "            \n",
+    "            self.move()\n",
+    "            if i%5 ==0:\n",
+    "                self.broadcast()  # broadcast nbest to neighbors\n",
+    "\n",
+    "            # Store positions for later analysis or plotting    \n",
+    "            self.positions.append(self.X.copy()) # take the records of position\n",
+    "            i = i + 1\n",
+    "            yield self.env.timeout(1)\n"
    ]
   },
   {
