--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "59caebbe",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
     "        graph = np.zeros((num_worms, num_worms))\n",
     "        for worm in self.swarm:\n",
     "            distance = dist.euclidean(self.X, worm.X)\n",
-    "            if distance <= score[j]:\n",
+    "            if distance <= worm.score:\n",
     "                graph[i][j] = distance\n",
     "        return graph\n",
     "\n",
