--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -79,6 +79,7 @@
     "        self.X = X\n",
     "        self.V = np.random.randn(2) * 0.1\n",
     "        self.score = score # for \n",
+    "        self.influence_dict = {name: 0.0}\n",
     "\n",
     "        self.positions = [self.X.copy()]\n",
     "        self.process = env.process(self.run())\n",
@@ -101,8 +102,9 @@
     "        for worm in self.swarm:\n",
     "            distance = dist.euclidean(self.X, worm.X)\n",
     "            if distance <= worm.score:\n",
-    "                graph[i][j] = distance\n",
-    "        return graph\n",
+    "                self.influence_dict[worm.name] = distance\n",
+    "            if worm.name == self.name:\n",
+    "                self.influence_dict[self.name] = 0.0\n",
     "\n",
     "    def next_turn(pop, score, inf_mat):\n",
     "        \"\"\"Update each worm's position based on the matrix of influences.\"\"\"\n",
