--- a/PSO_levy-simpy.ipynb
+++ b/PSO_levy-simpy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cfada43c-fcd3-48b2-acd0-4ad4f5766685",
    "metadata": {},
    "outputs": [],
@@ -27,24 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "3fb9b893",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def f(x, y):\n",
-    "    return np.cos(x) * np.cos(y) * np.exp(-((x - np.pi)**2 + (y - np.pi)**2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b569d671-47be-4abd-862a-f9e9f6b1dd1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Particle:\n",
-    "    def __init__(self, env, name, particles, X=np.array([1, 1]), target = [np.array([250,250]),999], waypoint = np.array([250,250]), c1=0.1, c2=0.1, w=0.8, speed=1.5433, transRange=100.0):\n",
+    "    def __init__(self, env, name, particles, X=np.array([1, 1]), target = [np.array([250,250]),999], waypoint = np.array([250,250]), c1=0.1, c2=0.1, w=0.8, speed=1.5433, \n",
+    "                 transRange=100.0, link_error_rate = 0.0):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        self.particles = particles  # List of all particles\n",
@@ -56,6 +46,7 @@
     "        self.stop_flag = False # when find the target stop\n",
     "        self.targetFounded = False\n",
     "        self.waypoint = waypoint\n",
+    "        self.link_error_rate = link_error_rate\n",
     "\n",
     "        self.X = X\n",
     "        self.target = target\n",
@@ -84,10 +75,11 @@
     "\n",
     "    def receive(self, nbest_position, nbest_fitness, isTarget):\n",
     "        \"\"\"update the personal nbest\"\"\"\n",
-    "        if nbest_fitness < self.nbest_fitness:\n",
-    "            self.nbest_position = nbest_position.copy()\n",
-    "            self.nbest_fitness = nbest_fitness\n",
-    "            self.targetFounded = isTarget\n",
+    "        if np.random.random(1)[0] >= self.link_error_rate: # If error, msg not reveived\n",
+    "            if nbest_fitness < self.nbest_fitness:\n",
+    "                self.nbest_position = nbest_position.copy()\n",
+    "                self.nbest_fitness = nbest_fitness\n",
+    "                self.targetFounded = isTarget\n",
     "    \n",
     "    def update(self):\n",
     "        r1, r2 = np.random.rand(2)\n",
@@ -168,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "c741a3a4",
    "metadata": {},
    "outputs": [],
@@ -249,6 +241,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "87538c8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating vectors X and Y\n",
+    "x = np.linspace(2, 25, 25)\n",
+    "theta = np.pi*(43/90)/(x-1)\n",
+    "y = 500 * 2 * np.sin(theta/2)\n",
+    " \n",
+    "fig = plt.figure(figsize = (10, 5))\n",
+    "# Create the plot\n",
+    "plt.scatter(x, y)\n",
+    " \n",
+    "# Show the plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 102,
    "id": "e43369ef",
    "metadata": {},
@@ -276,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "64befeb3",
    "metadata": {},
    "outputs": [],
@@ -294,12 +306,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ca6755f2-2172-4fd8-9df5-ce4d419600f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_pso(n_particles = 20, radius = 500, tr=100.0):\n",
+    "def simulate_pso(n_particles = 20, radius = 500, tr=100.0, error_rate = 0.0):\n",
     "    env = simpy.Environment()\n",
     "    firstWaypoints = initialize_arc_particles(n_particles, radius)\n",
     "    \n",
@@ -309,7 +321,7 @@
     "    target_position = np.array([x_min, y_min])  # Define the target position\n",
     "    target_fitness = f(x_min, y_min)\n",
     "\n",
-    "    particles = [Particle(env, f'Particle {i}', [], waypoint=firstWaypoints[i], transRange = tr) for i in range(n_particles)]\n",
+    "    particles = [Particle(env, f'Particle {i}', [], waypoint=firstWaypoints[i], transRange = tr, link_error_rate = error_rate) for i in range(n_particles)]\n",
     "    for particle in particles:\n",
     "        particle.particles = particles  # Give each particle the list of all particles\n",
     "        particle.target = [target_position,target_fitness]\n",
@@ -323,6 +335,37 @@
     "\n",
     "    global_best = min(particles, key=lambda p: p.pbest_fitness)\n",
     "    return [p.positions for p in particles], global_best.pbest_position, global_best.pbest_fitness, env.now, count_within_radius/n_particles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "be370209",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, radius = 500, tr=45, error_rate = 0.1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "e56ef743",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(559, 1.0)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "running_time, AUVpercentage"
    ]
   },
   {
@@ -407,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "518e7422",
    "metadata": {},
    "outputs": [
@@ -449,25 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "371b92f5",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Condition met at time 3000: 0/20 particles near target.\n"
-     ]
-    }
-   ],
-   "source": [
-    "positions, nbest, nbest_obj, running_time = simulate_pso(n_particles = 20, radius = 400, tr=100.0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "53f78b2e",
    "metadata": {},
    "outputs": [
@@ -508,6 +533,79 @@
    ],
    "source": [
     "percentageList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1522f2a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Link error rate:  0.85\n",
+      "Link error rate:  0.9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# link error rate\n",
+    "timeList = []\n",
+    "percentageList = []\n",
+    "#for i in [0.0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8]:\n",
+    "for i in [0.85,0.9]:\n",
+    "    time = 0\n",
+    "    percentage = 0\n",
+    "    print(\"Link error rate: \", i)\n",
+    "    for j in range(10):\n",
+    "        positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, radius = 500, tr=45, error_rate = i)\n",
+    "        time = time + running_time\n",
+    "        percentage = AUVpercentage + percentage\n",
+    "    timeList.append(time/10)\n",
+    "    percentageList.append(percentage/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "8c284566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1812.8, 2000.0]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "d58152a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6649999999999998\n",
+      "0.465\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in percentageList:\n",
+    "    print(i)"
    ]
   },
   {
