--- a/DPSO_NonAdHoc-simpy.ipynb
+++ b/DPSO_NonAdHoc-simpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "7cbb19a8-6b46-498e-a132-71ecfd7f8c75",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "cfada43c-fcd3-48b2-acd0-4ad4f5766685",
    "metadata": {},
    "outputs": [],
@@ -27,13 +27,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b569d671-47be-4abd-862a-f9e9f6b1dd1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Particle:\n",
-    "    def __init__(self, env, name, particles, X=np.array([1, 1]), target = [np.array([250,250]),999], waypoint = np.array([250,250]), c1=0.1, c2=0.1, w=0.8, speed=1.5433, transRange=100.0):\n",
+    "    def __init__(self, env, name, particles, X=np.array([1, 1]), target = [np.array([250,250]),999], waypoint = np.array([250,250]), c1=0.1, c2=0.1, w=0.8, speed=1.5433, \n",
+    "                 transRange=100.0, link_error_rate = 0.0):\n",
     "        self.env = env\n",
     "        self.name = name\n",
     "        self.particles = particles  # List of all particles\n",
@@ -45,6 +46,7 @@
     "        self.stop_flag = False # when find the target stop\n",
     "        self.targetFounded = False\n",
     "        self.waypoint = waypoint\n",
+    "        self.link_error_rate = link_error_rate\n",
     "\n",
     "        self.X = X\n",
     "        self.target = target\n",
@@ -73,10 +75,11 @@
     "\n",
     "    def receive(self, nbest_position, nbest_fitness, isTarget):\n",
     "        \"\"\"update the personal nbest\"\"\"\n",
-    "        if nbest_fitness < self.nbest_fitness:\n",
-    "            self.nbest_position = nbest_position.copy()\n",
-    "            self.nbest_fitness = nbest_fitness\n",
-    "            self.targetFounded = isTarget\n",
+    "        if np.random.random(1)[0] >= self.link_error_rate:\n",
+    "            if nbest_fitness < self.nbest_fitness:\n",
+    "                self.nbest_position = nbest_position.copy()\n",
+    "                self.nbest_fitness = nbest_fitness\n",
+    "                self.targetFounded = isTarget\n",
     "    \n",
     "    def update(self):\n",
     "        r1, r2 = np.random.rand(2)\n",
@@ -130,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "id": "9eb3c9ae",
    "metadata": {},
    "outputs": [],
@@ -157,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "id": "64befeb3",
    "metadata": {},
    "outputs": [],
@@ -175,12 +178,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "id": "ca6755f2-2172-4fd8-9df5-ce4d419600f0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def simulate_pso(n_particles = 20, tr=100.0):\n",
+    "def simulate_pso(n_particles = 20, tr=100.0, error_rate = 0.0):\n",
     "    env = simpy.Environment()\n",
     "    firstWaypoints = initialize_grid_particles(n_particles, 100, 400)\n",
     "    \n",
@@ -190,7 +193,7 @@
     "    target_position = np.array([x_min, y_min])  # Define the target position\n",
     "    target_fitness = f(x_min, y_min)\n",
     "\n",
-    "    particles = [Particle(env, f'Particle {i}', [], waypoint=firstWaypoints[i], transRange = tr) for i in range(n_particles)]\n",
+    "    particles = [Particle(env, f'Particle {i}', [], waypoint=firstWaypoints[i], transRange = tr, link_error_rate = error_rate) for i in range(n_particles)]\n",
     "    for particle in particles:\n",
     "        particle.particles = particles  # Give each particle the list of all particles\n",
     "        particle.target = [target_position,target_fitness]\n",
@@ -208,17 +211,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "id": "c915d3f5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, tr=45)"
+    "positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, tr=45, error_rate = 0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "id": "e6d9ac03",
    "metadata": {},
    "outputs": [
@@ -228,7 +231,7 @@
        "(2000, 0.15)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,6 +347,52 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "id": "26e36dd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Link error rate:  0.0\n",
+      "Link error rate:  0.05\n",
+      "Link error rate:  0.1\n",
+      "Link error rate:  0.15\n",
+      "Link error rate:  0.2\n",
+      "Link error rate:  0.25\n",
+      "Link error rate:  0.3\n",
+      "Link error rate:  0.35\n",
+      "Link error rate:  0.4\n",
+      "Link error rate:  0.45\n",
+      "Link error rate:  0.5\n",
+      "Link error rate:  0.55\n",
+      "Link error rate:  0.6\n",
+      "Link error rate:  0.65\n",
+      "Link error rate:  0.7\n",
+      "Link error rate:  0.75\n",
+      "Link error rate:  0.8\n"
+     ]
+    }
+   ],
+   "source": [
+    "# link error rate\n",
+    "timeList = []\n",
+    "percentageList = []\n",
+    "for i in [0.0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8]:\n",
+    "    time = 0\n",
+    "    percentage = 0\n",
+    "    print(\"Link error rate: \", i)\n",
+    "    for j in range(10):\n",
+    "        positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, tr=45, error_rate = i)\n",
+    "        time = time + running_time\n",
+    "        percentage = AUVpercentage + percentage\n",
+    "    timeList.append(time/10)\n",
+    "    percentageList.append(percentage/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 33,
    "id": "3f0b6d5f",
    "metadata": {},
@@ -352,46 +401,22 @@
      "data": {
       "text/plain": [
        "[2000.0,\n",
-       " 1028.4,\n",
-       " 1379.2,\n",
-       " 1335.1,\n",
-       " 1074.4,\n",
-       " 1276.9,\n",
-       " 685.6,\n",
        " 2000.0,\n",
        " 2000.0,\n",
-       " 990.8,\n",
-       " 1175.2,\n",
-       " 967.6,\n",
-       " 1172.5,\n",
-       " 845.6,\n",
-       " 432.5,\n",
-       " 1213.7,\n",
        " 2000.0,\n",
        " 2000.0,\n",
-       " 923.9,\n",
-       " 1208.6,\n",
-       " 1052.0,\n",
-       " 1053.5,\n",
-       " 738.6,\n",
-       " 738.1,\n",
-       " 897.3,\n",
-       " 1326.7,\n",
-       " 1368.6,\n",
-       " 740.9,\n",
-       " 584.8,\n",
-       " 1053.0,\n",
-       " 1218.7,\n",
-       " 734.3,\n",
-       " 734.2,\n",
-       " 580.4,\n",
-       " 911.8,\n",
-       " 1053.3,\n",
-       " 1057.2,\n",
-       " 1055.3,\n",
-       " 896.1,\n",
-       " 421.4,\n",
-       " 1370.8]"
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0]"
       ]
      },
      "execution_count": 33,
@@ -412,47 +437,23 @@
     {
      "data": {
       "text/plain": [
-       "[0.0,\n",
-       " 0.9545454545454545,\n",
-       " 0.8916666666666668,\n",
-       " 0.923076923076923,\n",
-       " 0.9714285714285715,\n",
-       " 0.9666666666666668,\n",
-       " 0.99375,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.9736842105263157,\n",
-       " 0.9349999999999998,\n",
-       " 0.9857142857142858,\n",
-       " 0.9681818181818181,\n",
-       " 0.9739130434782609,\n",
-       " 1.0,\n",
-       " 0.9719999999999999,\n",
-       " 0.0,\n",
-       " 0.0,\n",
-       " 0.9285714285714285,\n",
-       " 0.9379310344827585,\n",
-       " 0.9700000000000001,\n",
-       " 0.964516129032258,\n",
-       " 0.978125,\n",
-       " 0.9878787878787879,\n",
-       " 0.9764705882352942,\n",
-       " 0.9657142857142856,\n",
-       " 0.9472222222222222,\n",
-       " 0.9783783783783784,\n",
-       " 0.9815789473684211,\n",
-       " 0.9487179487179487,\n",
-       " 0.9375,\n",
-       " 0.9878048780487806,\n",
-       " 0.9880952380952381,\n",
-       " 0.9930232558139535,\n",
-       " 0.9795454545454545,\n",
-       " 0.9844444444444445,\n",
-       " 0.9804347826086957,\n",
-       " 0.9765957446808511,\n",
-       " 0.9770833333333332,\n",
-       " 1.0,\n",
-       " 0.958]"
+       "[0.15,\n",
+       " 0.14999999999999997,\n",
+       " 0.15499999999999997,\n",
+       " 0.15499999999999997,\n",
+       " 0.14999999999999997,\n",
+       " 0.13499999999999998,\n",
+       " 0.13499999999999998,\n",
+       " 0.15,\n",
+       " 0.145,\n",
+       " 0.15499999999999997,\n",
+       " 0.14999999999999997,\n",
+       " 0.15,\n",
+       " 0.13499999999999998,\n",
+       " 0.13999999999999999,\n",
+       " 0.15,\n",
+       " 0.155,\n",
+       " 0.13000000000000003]"
       ]
      },
      "execution_count": 34,
