--- a/PSO_levy-simpy.ipynb
+++ b/PSO_levy-simpy.ipynb
@@ -241,6 +241,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "id": "9fb2ea2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Creating vectors X and Y\n",
+    "x = 20\n",
+    "theta = np.pi*(43/90)/(x-1)\n",
+    "y = 700 * 2 * np.sin(theta/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "33b86ec2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.285000759592755"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27bed7a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6649999999999998\n",
+      "0.465\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in percentageList:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "87538c8e",
    "metadata": {},
@@ -600,6 +654,109 @@
      "text": [
       "0.6649999999999998\n",
       "0.465\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in percentageList:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "4b900bf3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Radius  250\n",
+      "Radius  300\n",
+      "Radius  350\n",
+      "Radius  400\n",
+      "Radius  450\n",
+      "Radius  500\n",
+      "Radius  550\n",
+      "Radius  600\n",
+      "Radius  650\n",
+      "Radius  700\n",
+      "Radius  750\n",
+      "Radius  800\n"
+     ]
+    }
+   ],
+   "source": [
+    "# radius\n",
+    "timeList = []\n",
+    "percentageList = []\n",
+    "for i in range(250,850,50):\n",
+    "    time = 0\n",
+    "    percentage = 0\n",
+    "    print(\"Radius \", i)\n",
+    "    for j in range(10):\n",
+    "        positions, nbest, nbest_obj, running_time, AUVpercentage = simulate_pso(n_particles = 20, radius = i, tr=45, error_rate = 0.0)\n",
+    "        time = time + running_time\n",
+    "        percentage = AUVpercentage + percentage\n",
+    "    timeList.append(time/10)\n",
+    "    percentageList.append(percentage/10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9fdced63",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 2000.0,\n",
+       " 672.3,\n",
+       " 597.2,\n",
+       " 680.6,\n",
+       " 721.7,\n",
+       " 953.4,\n",
+       " 1018.3,\n",
+       " 995.3,\n",
+       " 1233.5]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "11ef13b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.0\n",
+      "0.9949999999999999\n",
+      "1.0\n",
+      "1.0\n",
+      "1.0\n",
+      "0.9949999999999999\n",
+      "0.9949999999999999\n",
+      "1.0\n",
+      "1.0\n"
      ]
     }
    ],
