--- a/GlowWarm-simpy.ipynb
+++ b/GlowWarm-simpy.ipynb
@@ -71,6 +71,40 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "93096690",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Compute the polar coordinates of (x2, y2) relative to (x1, y1).\n",
+    "\n",
+    "Parameters\n",
+    "----------\n",
+    "x1, y1 : float\n",
+    "    Coordinates of the reference point.\n",
+    "x2, y2 : float\n",
+    "    Coordinates of the target point.\n",
+    "\n",
+    "Returns\n",
+    "-------\n",
+    "(r, theta) : tuple of floats\n",
+    "    r is the distance from (x1, y1) to (x2, y2).\n",
+    "    theta is the angle (in radians) from the positive x-axis.\n",
+    "\"\"\"\n",
+    "\n",
+    "def to_relative_polar(x1, y1, x2, y2):\n",
+    "    dx = x2 - x1\n",
+    "    dy = y2 - y1\n",
+    "    \n",
+    "    r = math.sqrt(dx**2 + dy**2)      # Radial distance\n",
+    "    theta = math.atan2(dy, dx)       # Angle in radians\n",
+    "    \n",
+    "    return (r, theta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "59caebbe",
    "metadata": {},
    "outputs": [],
